--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+
+}
+
 .App {
-  text-align: center;
+  background: url(../public/images/yosemite-1590012_1920.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0; 
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.MainFlexation {
+  max-width: 700px;
+  height: 700px;
   display: flex;
   flex-direction: column;
+  gap: 30%;
+  margin: auto;
+}
+.TopFlexDiv {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  flex-direction: row;
+  margin-left: 5%;
+  margin-top: 10px;
   color: white;
+  font-weight: bold;
+}
+.TopFlexDivCol {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: baseline;
+}
+.DegreeText {
+  font-size: 48px;
+  margin-top: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.ClearText {
+  transform: rotate(270deg);
+  font-size: 22px;
+  margin-right: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.BottomFlexDiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.471);
+  height: 10%;
+  min-width: 70%;
+  max-width: 100%;
+  border-radius: 25px;
+  box-shadow: 1px 1px 50px rgba(255, 255, 255, 0.437);
+}
+.BottomFlexDiv h4 {
+  margin: 10px;
+  font-weight: bold;
+  font-size: 18px;
+
+}
+.InputMain {
+  display: flex;
+  justify-content: center;
+  margin: 10% 0 5%;
+}
+.InputMain input {
+  width: 350px;
+  height: 50px;
+  border-radius: 20px;
+  padding: 10px;
+  font-size: 20px;
+  color: white;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.364);
+}
+
+::placeholder {
+  color: white;
 }
