--- a/src/App.css
+++ b/src/App.css
@@ -56,10 +56,12 @@
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
+  flex-wrap: wrap;
   margin: 0 auto;
   color: white;
   background-color: rgba(0, 0, 0, 0.471);
-  height: 10%;
+  height: fit-content;
+  padding: 15px;
   min-width: 70%;
   max-width: 100%;
   border-radius: 25px;
